--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ license = "GPL-3.0-or-later"
 serde = "1.0"
 serde_derive = "1.0"
 derive_more = "0.9.0"
+im = { version = "10.0.0", features = [ "serde" ] }
