--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ serde_derive = "1.0"
 derive_more = "0.9.0"
 im = { version = "10.0.0", features = [ "serde" ] }
 decorum = "0.0.10"
+serde_json = "1.0.17"
